--- a/HiringPortalAPI.Infra.IoC/HiringPortalAPI.Infra.IoC.csproj
+++ b/HiringPortalAPI.Infra.IoC/HiringPortalAPI.Infra.IoC.csproj
@@ -8,4 +8,9 @@
     <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="3.1.9" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\HiringPortalAPI.Application\HiringPortalAPI.Application.csproj" />
+    <ProjectReference Include="..\HiringPortalAPI.Infra.Data\HiringPortalAPI.Infra.Data.csproj" />
+  </ItemGroup>
+
 </Project>
